--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2642,39 +2642,39 @@ input, select, textarea {
 
 /* Footer */
 
-	#footer .icons {
-		margin: 1em 0 0 0;
-	}
+#footer .icons {
+	margin: 1em 0 0 0;
+}
 
-		#footer .icons a {
-			color: rgba(255, 255, 255, 0.4);
-		}
-
-	#footer .copyright {
+	#footer .icons a {
 		color: rgba(255, 255, 255, 0.4);
-		font-size: 0.8em;
-		list-style: none;
-		margin: 1em 0 0 0;
-		padding: 0;
 	}
 
-		#footer .copyright li {
-			border-left: solid 1px rgba(255, 255, 255, 0.25);
-			display: inline-block;
-			line-height: 1em;
-			margin-left: 0.75em;
-			padding-left: 0.75em;
+#footer .copyright {
+	color: rgba(255, 255, 255, 0.4);
+	font-size: 0.8em;
+	list-style: none;
+	margin: 1em 0 0 0;
+	padding: 0;
+}
+
+	#footer .copyright li {
+		border-left: solid 1px rgba(255, 255, 255, 0.25);
+		display: inline-block;
+		line-height: 1em;
+		margin-left: 0.75em;
+		padding-left: 0.75em;
+	}
+
+		#footer .copyright li:first-child {
+			border-left: 0;
+			margin-left: 0;
+			padding-left: 0;
 		}
 
-			#footer .copyright li:first-child {
-				border-left: 0;
-				margin-left: 0;
-				padding-left: 0;
-			}
-
-			#footer .copyright li a {
-				color: inherit;
-			}
+		#footer .copyright li a {
+			color: inherit;
+		}
 
 /* Main */
 
@@ -3072,9 +3072,10 @@ input, select, textarea {
 		/* Footer */
 
 			#footer {
-				background-attachment: fixed;
+				background-attachment: scroll;
 				background-color: #1f1815;
 				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
 				bottom: auto;
@@ -3205,12 +3206,12 @@ input, select, textarea {
 
 		/* Footer */
 
-			#footer .copyright li {
-				border-left-width: 0;
-				display: block;
-				line-height: 2.25em;
-				margin-left: 0;
-				padding-left: 0;
-			}
+		#footer .copyright li {
+			border-left-width: 0;
+			display: block;
+			line-height: 2.25em;
+			margin-left: 0;
+			padding-left: 0;
+		}
 
 	}
