--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -172,6 +172,7 @@ input, select, textarea {
 		letter-spacing: 0.25em;
 		text-transform: uppercase;
 		white-space: nowrap;
+		justify-content: center;
 	}
 
 		.author .name {
@@ -195,7 +196,7 @@ input, select, textarea {
 
 
 	.post {
-		padding: 3em 3em 1em 3em ;
+		padding: 1em 3em 1em 3em ;
 		background: #ffffff;
 		border: solid 1px rgba(160, 160, 160, 0.3);
 		margin: 0 0 3em 0;
@@ -208,10 +209,10 @@ input, select, textarea {
 			display: -ms-flex;
 			display: flex;
 			border-bottom: solid 1px rgba(160, 160, 160, 0.3);
-			left: -3em;
-			margin: -3em 0 3em 0;
+			
+			
 			position: relative;
-			width: calc(100% + 6em);
+			
 		}
 
 			.post > header .title {
@@ -220,7 +221,7 @@ input, select, textarea {
 				-ms-flex-grow: 1;
 				flex-grow: 1;
 				-ms-flex: 1;
-				padding: 3.75em 3em 3.3em 3em;
+				padding: 3em 3em 3em 3em;
 			}
 
 				.post > header .title h2 {
@@ -233,10 +234,10 @@ input, select, textarea {
 				}
 
 			.post > header .meta {
-				padding: 3.75em 3em 1.75em 3em ;
+				padding: 2em 3em 1em 5em ;
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				min-width: 17em;
-				text-align: right;
+				text-align: center;
 				width: 17em;
 			}
 
@@ -404,7 +405,7 @@ input, select, textarea {
 							}
 
 							.post > header .meta .author img {
-								width: 3.5em;
+								width: 9em;
 							}
 
 		}
